Use `text-wrap: none` to prevent height inflation in spacer

--- a/packages/completer/style/base.css
+++ b/packages/completer/style/base.css
@@ -218,6 +218,8 @@
   opacity: 0;
   display: inline-block;
   vertical-align: top;
+  /* stylelint-disable-next-line csstree/validator */
+  text-wrap: none;
 }
 
 .jp-GhostText-letterSpacer {
